--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <!-- SEO Meta description -->
     <meta
       name="description"
-      content="Direktori Wisata, kuliner dan oleh oleh terlengkap di indonesia. "
+      content="Aplikasi penerjemah Bahasa Isyarat Indonesia (BISINDO)"
     />
-    <meta name="author" content="Papa Antar" />
+    <meta name="author" content="Beyond" />
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-    <meta property="og:site_name" content="Papa Antar" />
+    <meta property="og:site_name" content="Beyond" />
     <!-- website name -->
-    <meta property="og:site" content="Papa Antar" />
+    <meta property="og:site" content="Beyond" />
     <!-- website link -->
-    <meta property="og:title" content="Papa Antar" />
+    <meta property="og:title" content="Beyond" />
     <!-- title shown in the actual shared post -->
     <meta
       property="og:description"
-      content="Direktori Wisata, kuliner dan oleh oleh terlengkap di indonesia. "
+      content="Aplikasi penerjemah Bahasa Isyarat Indonesia (BISINDO)"
     />
 
     <!--title-->
@@ -80,7 +80,7 @@
       <!--start navbar-->
       <nav class="navbar navbar-expand-lg fixed-top bg-transparent">
         <div class="container">
-          <a class="navbar-brand" href="http://papaantar.com/">
+          <a class="navbar-brand" href="http://beyondapp.vercel.app/">
             <img src="img/icon.png" alt="logo" class="img-fluid" width="60px" />
           </a>
           <h3 class="text-white mt-3">Beyond</h3>
