--- a/index.html
+++ b/index.html
@@ -290,9 +290,7 @@
                 <div class="section-heading text-center mb-5">
                   <h1>Fitur <span class="color-secondary">Utama</span></h1>
                   <p>
-                    fitur utama dari papaantar adalah memberikan informasi
-                    lengkap tentang wisata, kuliner dan oleh-oleh di seluruh
-                    indonesia.
+                    fitur utama dari Beyond adalah untuk menerjemahkan foto atau gambar Bahasa Isyarat Indonesia .
                   </p>
                 </div>
               </div>
